--- a/views/users/placeOrder.ejs
+++ b/views/users/placeOrder.ejs
@@ -149,17 +149,26 @@
                   name="paymentMethod"
                   value="COD"
                   checked
-                />COD
+                /><img
+                  src="/users/images/logos/cod.jpg"
+                  width="80"
+                  alt="Razorpay"
+                />
               </label>
               <label class="radio-inline">
-                <input
-                  type="radio"
-                  name="paymentMethod"
-                  value="RAZORPAY"
-                />Razor Pay
+                <input type="radio" name="paymentMethod" value="RAZORPAY" />
+                <img
+                  src="/users/images/logos/razorpay1.jpg"
+                  width="80"
+                  alt="Razorpay"
+                />
               </label>
               <label class="radio-inline">
-                <input type="radio" name="paymentMethod" value="PAYPAL" />Paypal
+                <input type="radio" name="paymentMethod" value="PAYPAL" /><img
+                  src="/users/images/logos/payapal.jpg"
+                  width="80"
+                  alt="Paypal"
+                />
               </label>
             </div>
             <div id="paypal-button-container" style="display: none"></div>
