empty wishlist cart

--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -1,5 +1,21 @@
-<section class="page-fill" style="background-color: #ece6d9" >
-  <div style="padding-top: 5%; ">
+<section class="page-fill" style="background-color: #ece6d9">
+  <% if(cartCount == 0) {%>
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+      <div class="card pb-5 shadow-sm">
+        <div class="card-body text-center">
+          <img
+            src="/users/images/logos/cart.jpg"
+            alt="avatar"
+            class="rounded-circle img-fluid"
+            style="width: 150px"
+          />
+          <h5 class="my-3">Your cart is empty</h5>
+          <p class="text-muted">Looks like you haven't added anything to your cart</p>
+        </div>
+        <div class="d-flex justify-content-center"><a href="/" class="btn btn-outline-success ">Go home</a></div>
+      </div>
+    </div>
+  <% }else{ %><div style="padding-top: 5%; ">
     <!-- padding-bottom: 5%; -->
     <div class="container shadow-lg rounded pb-2 pt-2">
       <div class="row d-flex pb-2"><i class="fa-solid fa-cart-shopping fa-4x" ><span style="font-size: 30%;" >cart</span></i></div>
@@ -61,13 +77,13 @@
      </div>
     </div>
    </div>
-  <% } %> 
+  <% } %>  <% } %>
 </section>
 
 <!-- onclick="return confirm('Do you want to delete product.Name ?')" -->
 
 <script>
-  function removeProduct(cartId,prodId){
+  function removeProduct(cartId, prodId) {
     Swal.fire({
       title: "Are you sure?",
       text: "You won't be able to revert this!",
@@ -78,13 +94,13 @@
       confirmButtonText: "Yes, remove it!",
     }).then((result) => {
       if (result.isConfirmed) {
-    $.ajax({
-      url:`/removeCartProduct/${cartId}/${prodId}`,
-      method:'get',
-      success:(response)=>{
-        location.reload();
-      }
-    })
+        $.ajax({
+          url: `/removeCartProduct/${cartId}/${prodId}`,
+          method: "get",
+          success: (response) => {
+            location.reload();
+          },
+        });
       }
     });
   }
@@ -93,52 +109,52 @@
 <!-- yy -->
 
 <script>
-  function changeCartQuantity(cartId,proId,userId,count){
-     let quantity=parseInt(document.getElementById(proId).innerHTML)
-     count=parseInt(count)
+  function changeCartQuantity(cartId, proId, userId, count) {
+    let quantity = parseInt(document.getElementById(proId).innerHTML);
+    count = parseInt(count);
 
     $.ajax({
-      url:'/changeCartProductQuantity',
-      data:{
-        user:userId,
-        cart:cartId,
-        product:proId,
-        count:count,
-        quantity:quantity
+      url: "/changeCartProductQuantity",
+      data: {
+        user: userId,
+        cart: cartId,
+        product: proId,
+        count: count,
+        quantity: quantity,
       },
-      method:'post',
-      success:(response)=>{
-        if(response.response.removeProduct){
-          let timerInterval
-Swal.fire({
-  title: 'Removing product from cart',
-  html: 'Removing in <b></b> milliseconds.',
-  timer: 500,
-  background: "#ece6d9",
-  timerProgressBar: true,
-  didOpen: () => {
-    Swal.showLoading()
-    const b = Swal.getHtmlContainer().querySelector('b')
-    timerInterval = setInterval(() => {
-      b.textContent = Swal.getTimerLeft()
-    }, 100)
-  },
-  willClose: () => {
-    clearInterval(timerInterval)
-  }
-}).then((result) => {
-  /* Read more about handling dismissals below */
-  if (result.dismiss === Swal.DismissReason.timer) {
-    console.log('I was closed by the timer')
-  }
-})
+      method: "post",
+      success: (response) => {
+        if (response.response.removeProduct) {
+          let timerInterval;
+          Swal.fire({
+            title: "Removing product from cart",
+            html: "Removing in <b></b> milliseconds.",
+            timer: 500,
+            background: "#ece6d9",
+            timerProgressBar: true,
+            didOpen: () => {
+              Swal.showLoading();
+              const b = Swal.getHtmlContainer().querySelector("b");
+              timerInterval = setInterval(() => {
+                b.textContent = Swal.getTimerLeft();
+              }, 100);
+            },
+            willClose: () => {
+              clearInterval(timerInterval);
+            },
+          }).then((result) => {
+            /* Read more about handling dismissals below */
+            if (result.dismiss === Swal.DismissReason.timer) {
+              console.log("I was closed by the timer");
+            }
+          });
           location.reload();
-        }else{
-          document.getElementById(proId).innerHTML=quantity+count
-          document.getElementById("total").innerHTML=response.total
+        } else {
+          document.getElementById(proId).innerHTML = quantity + count;
+          document.getElementById("total").innerHTML = response.total;
         }
-      }
-    })
+      },
+    });
   }
 </script>
 
