--- a/views/users/userprofile.ejs
+++ b/views/users/userprofile.ejs
@@ -5,7 +5,7 @@
         <div class="card mb-4">
           <div class="card-body text-center">
             <img
-              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
+              src="/users/images/logos/userLogo.png"
               alt="avatar"
               class="rounded-circle img-fluid"
               style="width: 150px"
