--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -1,4 +1,21 @@
 <section class="page-fill" style="background-color: #ece6d9">
+  <% if(wishlistCount == 0) {%>
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+      <div class="card pb-5 shadow-sm">
+        <div class="card-body text-center">
+          <img
+            src="/users/images/logos/wishlist.jpg"
+            alt="avatar"
+            class="rounded-circle img-fluid"
+            style="width: 150px"
+          />
+          <h5 class="my-3">Your wishlist is empty</h5>
+          <p class="text-muted">Looks like you haven't added anything to your wishlist</p>
+        </div>
+        <div class="d-flex justify-content-center"><a href="/" class="btn btn-outline-success ">Go home</a></div>
+      </div>
+    </div>
+  <% }else{ %>
     <div style="padding-top: 5%; padding-bottom: 5%;">
       <div class="container shadow-lg rounded pb-2 pt-2">
         <div class="row d-flex pb-2"><i class="fa-solid fa-heart fa-4x" ><span style="font-size: 23%;" >wish - list</span></i></div>
@@ -53,6 +70,7 @@
           </table>
         </div>
     </div>
+    <% } %>
   </section>
   
   <!-- onclick="return confirm('Do you want to delete product.Name ?')" -->
