--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -33,6 +33,9 @@
             <a class="nav-link" href="/admin/orders">Orders</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/admin/coupons">Coupons</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/admin/requests"
               >Requests<span
               class="badge bg-secondary zindex-offcanvas"
