--- a/views/users/placeOrder.ejs
+++ b/views/users/placeOrder.ejs
@@ -1,38 +1,42 @@
 <section class="page-fill" style="background-color: #ece6d9">
   <div class="container" style="padding-top: 5%; padding-bottom: 5%">
-    <div class="row ms-3 me-3 text-start">
-      <!-- Example split danger button -->
-      <div class="btn-group col-md-2">
-        <button type="button" class="btn btn-secondary">Choose Address</button>
-        <button
-          type="button"
-          class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <span class="visually-hidden">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <% let addr =0 %> <% user.addresses.forEach((address)=>{%>
-          <li class="p-2">
-            <a
-              onclick="showAddress('<%=address.house %>', '<%=address.street %>', '<%=address.district %>',
-            '<%=address.state %>', '<%=address.pincode %>','<%=address.mobile %>')"
-              style="cursor: pointer"
-              ><%= ++addr %>: <%=address.house %>, <%=address.street %>,
-              <%=address.district %>, <%=address.state %>, pin:
-              <%=address.pincode %>, ph: <%=address.mobile %>
-              <li><hr class="dropdown-divider" /></li>
-            </a>
-          </li>
-          <% }) %>
-        </ul>
-      </div>
-    </div>
     <form id="checkout-form">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="card col-md-7 col-sm-12 shadow-sm m-3">
-          <h2 class="mt-2">Delivery Details</h2>
+          <div class="d-flex justify-content-between">
+            <div>
+              <h2 class="mt-2">Delivery Details</h2>
+            </div>
+            <!-- Example split danger button -->
+            <div class="btn-group h-25 mt-2">
+              <button type="button" class="btn btn-secondary">
+                Choose Address
+              </button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <span class="visually-hidden">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <% let addr =0 %> <% user.addresses.forEach((address)=>{%>
+                <li class="p-2">
+                  <a
+                    onclick="showAddress('<%=address.house %>', '<%=address.street %>', '<%=address.district %>',
+                    '<%=address.state %>', '<%=address.pincode %>','<%=address.mobile %>')"
+                    style="cursor: pointer"
+                    ><%= ++addr %>: <%=address.house %>, <%=address.street %>,
+                    <%=address.district %>, <%=address.state %>, pin:
+                    <%=address.pincode %>, ph: <%=address.mobile %>
+                    <li><hr class="dropdown-divider" /></li>
+                  </a>
+                </li>
+                <% }) %>
+              </ul>
+            </div>
+          </div>
           <br />
           <div>
             <!-- <textarea
@@ -139,7 +143,7 @@
         >
           <div class="container mt-5 checkout mb-3">
             <div id="total" hidden><%=totalAmount %></div>
-            <h5>Total Amount : <%=totalAmount %> ₹</h5>
+            <h5>Total Amount : ₹ <%=totalAmount %></h5>
             <hr style="width: 75%; text-align: left; margin-left: 0" />
             <div class="payment">
               <p>Payment method</p>
@@ -173,12 +177,30 @@
             </div>
             <hr style="width: 75%; text-align: left; margin-left: 0" />
             <h5>Available Coupons</h5>
-            <select class="form-select" aria-label="Default select example">
-              <option selected>Apply Coupon</option>
-              <% locals.coupons.forEach((coupon)=>{ %>
-              <option value="<%=coupon.discount%> "><%=coupon.name %></option>
-              <% }) %>
-            </select>
+            <div class="d-flex">
+              <div class="me-2">
+                <select
+                  class="form-select"
+                  aria-label="Default select example"
+                  id="couponValue"
+                >
+                  <!-- <option selected>Apply Coupon</option> -->
+                  <% locals.coupons.forEach((coupon)=>{ %>
+                  <option value="<%=coupon.discount%>">
+                    <%=coupon.name %>
+                  </option>
+                  <% }) %>
+                </select>
+              </div>
+              <div>
+                <a class="btn btn-outline-success" onclick="redeemCoupon()"
+                  >Redeem</a
+                >
+              </div>
+            </div>
+            <h6 class="text-success" id="couponPrice"></h6>
+            <h6 class="text-danger">You have used this coupon once</h6>
+            <h3 id="grandTotal" class="text-success"></h3>
             <div id="paypal-button-container" style="display: none"></div>
             <div id="order-Id" hidden></div>
             <div id="phone" hidden></div>
@@ -350,5 +372,24 @@
     document.getElementById("state").value = state;
     document.getElementById("pincode").value = pincode;
     document.getElementById("mobile").value = mobile;
+  }
+</script>
+
+<script>
+  function redeemCoupon() {
+    let coupon = document.getElementById("couponValue").value;
+    $.ajax({
+      url: "/checkCoupon",
+    });
+    // let coupon = document.getElementById("couponValue").value;
+    let Total = document.getElementById("total").innerHTML;
+    let grandTotal = Total - coupon;
+
+    document.getElementById(
+      "couponPrice"
+    ).innerHTML = `Redeemed ₹ ${coupon} from ${Total}`;
+    document.getElementById(
+      "grandTotal"
+    ).innerHTML = `Grand Total : ₹ ${grandTotal}`;
   }
 </script>
