--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -96,8 +96,8 @@
           </div>
           <div class="card-body" style="background-color: #e9e0ca">
             <h5 class="card-title"><%= product.Name %></h5>
-            <p class="card-text"><%= product.Price %> ₹</p>
-            <p class="card-text"><%= product.Description %></p>
+            <p class="card-text">Price : <strike>₹ <%= product.Price %></strike> ₹ <%= Math.round(product.Price - ((product.Price*product.Offer)/100))  %> </p>
+            <p class="card-text"><%= product.Offer %> % offer</p>
             <!-- <a href="#" class="btn text-white" style="background-color: #1c3879"
               >Add to cart</a
             > -->
