--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -1,5 +1,5 @@
 <section class="page-fill" style="background-color: #ece6d9">
-  <div style="padding-top: 5%">
+  <div style="padding-top: 5%; padding-bottom: 2%">
     <!-- padding-bottom: 5%; -->
     <div class="container shadow-lg rounded pb-2 pt-2">
       <div class="row d-flex pb-2">
