--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -48,7 +48,7 @@
                   />
                 </td>
                 <td><%=cartItem.product.Name %></td>
-                <td><%=cartItem.product.Price %> ₹</td>
+                <td>₹ <%= cartItem.product.OfferPrice %></td>
               
               <td><button class="card-item-count btn btn-outline-secondary m-1" onclick="changeCartQuantity('<%=cartItem._id%>','<%=cartItem.product._id %>','<%=user._id%>',-1)"><i class="fa-solid fa-minus"></i><button class="btn btn-outline-dark m-1" id="<%=cartItem.product._id %>"><%=cartItem.quantity %><button class="card-item-count btn btn-outline-secondary m-1" onclick="changeCartQuantity('<%=cartItem._id%>','<%=cartItem.product._id %>','<%=user._id%>',1)"><i class="fa-solid fa-plus"></i>
               </button></td>
@@ -72,7 +72,7 @@
   <div class="container">
     <div class="row d-flex flex-row-reverse">
       <div class="col-md-2 col-sm-3 card text-center pt-1 shadow-sm" style="background-color: #ece6d9" >
-        <h4>Total : <span id="total"><%=totalAmount  %></span>  ₹</h4>
+        <h4>Total : <span id="total">₹ <%=totalAmount  %></span></h4>
         <a href="/placeOrder" class="btn btn-outline-success mb-2">Place Order</a>
      </div>
     </div>
