--- a/views/users/orderProducts.ejs
+++ b/views/users/orderProducts.ejs
@@ -48,7 +48,7 @@
             <div class="card-body" style="background-color: #ede2c8">
               <h5 class="card-title"><%= orderProduct.product.Name %></h5>
               <p class="card-text">
-                Price / unit : <%= orderProduct.product.Price %> ₹
+                Price / unit : <%= orderProduct.product.OfferPrice %> ₹
               </p>
               <p class="card-text">Quantity : <%= orderProduct.quantity %></p>
             </div>
