--- a/views/users/categoryProducts.ejs
+++ b/views/users/categoryProducts.ejs
@@ -46,9 +46,9 @@
               </a>
             </div>
             <div class="card-body" style="background-color: #e9e0ca">
-              <h5 class="card-title"><%= product.Name %></h5>
-              <p class="card-text"><%= product.Price %> ₹</p>
-              <p class="card-text"><%= product.Description %></p>
+              <h5 class="card-title"><%= product.Name %> </h5>
+            <p class="card-text"><strike>₹ <%= product.Price %></strike> <b>₹ <%= product.OfferPrice  %></b> </p>
+            <p class="card-text"><i><%= product.Offer %> % offer</i></p>
               <!-- <a href="#" class="btn text-white" style="background-color: #1c3879"
                 >Add to cart</a
               > -->
