--- a/public/users/styles/styles.css
+++ b/public/users/styles/styles.css
@@ -1,3 +1,10 @@
+.card-work:hover {
+  transform: scale(1.1);
+}
+
+.card-work {
+  transition: all 0.5s ease;
+}
 
 /* .card:hover {
   transform: scale(1.1);
