--- a/views/users/loginOTP.ejs
+++ b/views/users/loginOTP.ejs
@@ -1,4 +1,6 @@
-<section class="bg-light" style="padding-top: 250px; padding-bottom: 250px">
+<section
+  style="background-color: #ece6d9; padding-top: 250px; padding-bottom: 250px"
+>
   <div class="container h-75 d-flex justify-content-center align-items-center">
     <div class="position-relative">
       <div
