--- a/views/users/verifyNo.ejs
+++ b/views/users/verifyNo.ejs
@@ -1,4 +1,6 @@
-<section style="padding-top: 250px; padding-bottom: 250px">
+<section
+  style="padding-top: 250px; padding-bottom: 250px; background-color: #ece6d9"
+>
   <div class="container h-75 d-flex justify-content-center align-items-center">
     <div class="position-relative">
       <div
@@ -33,13 +35,75 @@
             </button>
           </div>
         </form>
-      </div>
-      <div class="card-2">
-        <div class="content d-flex justify-content-center align-items-center">
-          <span>Didn't get the code</span>
-          <a href="#" class="text-decoration-none ms-3">Resend(1/3)</a>
+        <div class="mt-2">
+          <a
+            id="resendOTP"
+            class="text-success text-decoration-none"
+            style="cursor: pointer; display: none"
+          >
+            Resend OTP (<span id="OTPcount"></span>/3)
+          </a>
+          <div id="otp-text">
+            Resend OTP in <span id="timer"></span> seconds
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+<script>
+  let seconds = 10;
+  let timer;
+  let OTPcount = 0;
+  console.log(timer);
+  function myFunction() {
+    if (seconds < 10) {
+      // I want it to say 1:00, not 60
+      document.getElementById("timer").innerHTML = seconds;
+    }
+    if (seconds > 0) {
+      // so it doesn't go to -1
+      seconds--;
+    } else {
+      clearInterval(timer);
+      document.getElementById("OTPcount").innerHTML = OTPcount++;
+      document.getElementById("resendOTP").style.display = "block";
+      document.getElementById("otp-text").style.display = "none";
+    }
+  }
+
+  function counter() {
+    console.log("working");
+    if (!timer) {
+      console.log("timer working");
+      timer = window.setInterval(function () {
+        myFunction();
+      }, 1000); // every second
+    }
+  }
+  document.getElementById("timer").innerHTML = "10";
+
+  //to start counter when the page loads
+  counter();
+
+  document.getElementById("resendOTP").onclick = function () {
+    if (OTPcount == "4") {
+      window.location.href = "/login";
+    } else {
+      $.ajax({
+        url: "/resendOTP",
+        method: "post",
+        success: (response) => {
+          console.log(response);
+          timer = false;
+          seconds = 10;
+          document.getElementById("timer").innerHTML = "10";
+          document.getElementById("resendOTP").style.display = "none";
+          document.getElementById("otp-text").style.display = "block";
+          counter();
+        },
+      });
+    }
+  };
+</script>
