--- a/views/users/orderProducts.ejs
+++ b/views/users/orderProducts.ejs
@@ -14,6 +14,9 @@
               <button class="btn btn-outline-danger" id="cancel" onclick="cancelOrder('<%=order._id %>','<%=order.deliveryDetails.mobile%>')">Cancel Order</button>
               <% } %> 
               <% } %>
+              <% if (order.status == "Delivered"){ %> 
+                <button class="btn btn-outline-danger" id="cancel" onclick="returnOrder('<%=order._id %>','<%=order.deliveryDetails.mobile%>')">Return Order</button>
+                <% } %> 
           </div>
         </div>
         <div class="pb-2"></div>
@@ -93,6 +96,69 @@
     )
       }
     })
+  }
+})
+  }
+</script>
+
+<script>
+  function returnOrder(orderId,mobile){
+    console.log(orderId)
+    Swal.fire({
+  title: 'Are you sure?',
+  text: `Do you want to return the order with OrderId : ${orderId}`,
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes!'
+}).then((result) => {
+  if (result.isConfirmed) {
+    Swal.fire({
+      title: "Reason for return",
+      html: `<input type="text" id="subject" class="swal2-input" placeholder= "Subject">
+      <textarea id="description" class="swal2-input" placeholder= "Type a detailed reason for return" rows="20" cols="25"></textarea>`,
+      confirmButtonText: "Send",
+      focusConfirm: false,
+      preConfirm: () => {
+        const subject = Swal.getPopup().querySelector("#subject").value;
+        const description = Swal.getPopup().querySelector("#description").value;
+
+        let validateDescription = (description) => {
+          return String(description)
+            .toLowerCase()
+            .match(/^[\w_ ]{10,}$/);
+        };
+
+        let validateSubject = (subject) => {
+          return String(subject)
+            .toLowerCase()
+            .match(/^[\w_ ]{3,}$/);
+        };
+
+        const checkSubject = validateSubject(subject);
+        const checkDescription = validateDescription(description);
+        console.log(checkSubject)
+        console.log(checkDescription)
+
+        if (!checkSubject || !checkDescription) {
+          Swal.showValidationMessage(`Enter subject and a brief description`);
+        }else{
+          $.ajax({
+            url: "/returnOrder",
+            data: {
+              subject,
+              description,
+              orderId,
+              mobile,
+            },
+            method: "post",
+            success: (response) => {
+            }
+          })
+        }
+          }
+        });
   }
 })
   }
