Return option almost completed

--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -38,11 +38,21 @@
           <li class="nav-item">
             <a class="nav-link" href="/admin/requests"
               >Requests<span
-              class="badge bg-secondary zindex-offcanvas"
-              id="request-count"
-              ><%= locals.reqNo  %> </span
-            ></i
-            ></a>
+                class="badge bg-secondary zindex-offcanvas"
+                id="request-count"
+                ><%= locals.reqNo %>
+              </span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/returns"
+              >Returns
+              <span
+                class="badge bg-secondary zindex-offcanvas"
+                id="return-count"
+                ><%= locals.returnsNo %>
+              </span>
+            </a>
           </li>
         </ul>
         <div class="dropdown me-2">
