sales report in home

--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -57,6 +57,59 @@
       </div>
     </div>
   </div>
+
+  <!-- orders -->
+  <div class="container shadow-lg rounded pb-2 pt-2 mb-5">
+    <div class="row d-flex pb-2">
+      <i class="fa-solid fa-bag-shopping fa-4x"
+        ><span style="font-size: 30%" class="ps-1">orders</span></i
+      >
+    </div>
+    <table
+      class="table table-fluid table-hover table-bordered mt-5 pt-2"
+      id="pdfTable"
+    >
+      <!-- style="text-align: center" -->
+      <thead>
+        <tr class="bg-dark text-white">
+          <th scope="col" style="text-align: center">No</th>
+          <th scope="col" style="text-align: center">Date</th>
+          <th scope="col" style="text-align: center">Address</th>
+          <th scope="col" style="text-align: center">Total Amount</th>
+          <th scope="col" style="text-align: center">Payment</th>
+          <th scope="col" style="text-align: center">Status</th>
+          <!-- <th scope="col" style="text-align: center">View</th> -->
+        </tr>
+      </thead>
+      <% var No=1 %>
+      <tbody style="text-align: center">
+        <% locals.orders.forEach(order=>{%>
+        <tr>
+          <th scope="row"><%=No++ %></th>
+
+          <td><%=order.date %></td>
+          <td>
+            <%=order.deliveryDetails.address%>, pin:
+            <%=order.deliveryDetails.pincode %>, ph:
+            <%=order.deliveryDetails.mobile %>
+          </td>
+          <td>₹ <%=order.totalAmount %></td>
+          <td><%=order.paymentMethod %></td>
+          <td><%=order.status %></td>
+
+          <!-- <td><=order.status %><i class="fa-solid fa-spinner ps-1"></i></td> -->
+          <!-- <td>
+              <a
+                href="/viewOrderProducts/<=order._id%>"
+                class="btn btn-outline-dark removeProduct"
+                ><i class="fa-solid fa-eye"></i
+              ></a>
+            </td> -->
+        </tr>
+        <%})%>
+      </tbody>
+    </table>
+  </div>
 </section>
 
 <script>
