--- a/views/admin/viewOrders.ejs
+++ b/views/admin/viewOrders.ejs
@@ -9,7 +9,7 @@
       </div>
       <table
         class="table table-fluid table-hover table-bordered mt-5 pt-2"
-        id="pdfTable"
+        id="myTable"
       >
         <!-- style="text-align: center" -->
         <thead>
